--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -27,6 +27,7 @@
   <div class="row">
     <div class="col-xs-12">
       <p>Here's your selfie!</p>
+      <div id="selfie"></div>
     </div>
   </div>
 </div>
