--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,27 +6,38 @@
 
 <body>
 
-<div id="card" class="jumbotron">
-  <div class="container front">
-    <h1>Selfie Search</h1>
-    <p>Find the profile image associated with an email address.</p>
-    <form id="search-form">
-      <div class="form-group">
-        <label for="profile-email">Your email</label>
-        <input type="email" id="profile-email" class="form-control" placeholder="email@example.com">
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      
+      <div id="card">
+        
+        <div class="front panel panel-default">
+          <form id="search-form">
+            <h1>Selfie Search</h1>
+            <p>Find the profile image associated with an email address.</p>
+            <div class="form-group">
+              <label for="profile-email">Your email</label>
+              <input type="email" id="profile-email" class="form-control" placeholder="email@example.com">
+            </div>
+            <div class="form-group">
+              <i class="fa fa-spin fa-spinner fa-lg loading-spinner"></i>
+              <button id="search-btn" class="btn btn-info">Search</button>
+            </div>
+          </form>
+        </div>
+
+        <div class="back panel panel-default hidden">
+          <h2>Here's your selfie!</h2>
+          <img id="selfie"></img>
+          <!-- TODO: Needs high resolution gravatar -->
+          <!-- TODO: This isn't me button needs to override db -->
+          <button id="wrong-img" class="btn btn-danger">This isn't me</button>
+          <button id="flip-back" class="btn btn-info">Search again</button>
+        </div>
+
       </div>
-      <div class="form-group">
-        <i class="fa fa-spin fa-spinner fa-lg loading-spinner"></i>
-        <button id="search-btn" class="btn btn-info">Search</button>
-      </div>
-    </form>
-  </div>
-  <div class="container back">
-    <div class="row">
-      <div class="col-xs-12">
-        <div id="selfie"></div>
-        <button id="flip-back">Try again</button>
-      </div>
+
     </div>
   </div>
 </div>
