Readme instructions and images

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,7 @@
 
 <body>
 
-<div class="container">
+<div class="container main-content">
   <div class="row">
     <div class="col-xs-12">
       
@@ -30,8 +30,8 @@
         <div class="back panel panel-default hidden">
           <h2>Here's your selfie!</h2>
           <img id="selfie"></img>
-          <!-- TODO: This isn't me button needs to override db -->
-          <button id="wrong-img" class="btn btn-danger">This isn't me</button>
+          <!-- TODO: Make the following button override the entry in the DB -->
+          <!-- <button id="wrong-img" class="btn btn-danger">This isn't me</button> -->
           <button id="flip-back" class="btn btn-info">Search again</button>
         </div>
 
