--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,13 @@
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-lg-8 col-lg-offset-2">
+        <p class="muted text-center">Created by <a href="http://www.kortaggio.com">Bill Mei</a>. <a href="https://github.com/Kortaggio/selfie-search">View this project on GitHub</a>. <a href="https://www.fullcontact.com">Some data provided by FullContact</a></p>
+      </div>
+    </div>
+  </div>
+</footer>
+
 <div id="alert-modal" class="modal fade">
   <div class="modal-dialog">
     <div class="modal-content">
