--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,11 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body {
   background-color: #ecf0f1;
+  margin-bottom: 30px;
 }
 
 #card {
@@ -67,4 +73,15 @@ body {
     height: 310px;
     margin: 2em auto;
     display: block;
+  }
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  background-color: #f5f5f5;
+}
+  .attribution {
+    height: 25px;
   }
