--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,6 @@
 <meta charset="UTF-8">
 <title>Selfie Search | Find the profile image associated with an email address.</title>
+<link rel="icon" href="/img/favicon.ico">
 <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css" />
 <link rel="stylesheet" type="text/css" href="/css/main.css" />
