--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,12 @@
-html {
+html{
   position: relative;
   min-height: 100%;
 }
 
 body {
   background-color: #ecf0f1;
-  margin-bottom: 30px;
+  min-height: 100%;
+  margin-bottom: 5em;
 }
 
 #card {
@@ -79,10 +80,6 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 30px;
+  padding-top: 1em;
   background-color: #f5f5f5;
 }
-  .attribution {
-    padding-top: 2px;
-    height: 25px;
-  }
