--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,17 @@
 <meta charset="UTF-8">
-<title>Selfie Search | Find the profile image associated with an email address.</title>
+<title>Selfie Search</title>
+
+<meta name="description" content="Find the profile image associated with an email address.">
+
 <link rel="icon" href="/img/favicon.ico">
 <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css" />
 <link rel="stylesheet" type="text/css" href="/css/main.css" />
+
+<meta property="og:title" content="Selfie Search" />
+<meta property="og:description" content="Find the profile image associated with an email address." />
+<meta property="og:image" content="/img/thumbnail.png" />
+<link rel="image_src" href="/img/thumbnail.png" />
+
+<link rel="author" href="https://plus.google.com/+BillMei" />
+<link rel="publisher" href="https://plus.google.com/+BillMei" />
