og:image needs absolute URL

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
 
 <meta property="og:title" content="Selfie Search" />
 <meta property="og:description" content="Find the profile image associated with an email address." />
-<meta property="og:image" content="/img/thumbnail.png" />
+<meta property="og:image" content="http://selfie-search.herokuapp.com/img/thumbnail.png" />
 <link rel="image_src" href="/img/thumbnail.png" />
 
 <link rel="author" href="https://plus.google.com/+BillMei" />
