--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-lg-8 col-lg-offset-2">
         <p class="text-center">Created by <a href="https://billmei.net">Bill Mei</a>. View this project <a href="https://github.com/billmei/selfie-search">on GitHub</a>.</p>
-        <p class="text-muted text-center">Some data provided by <a href="https://www.fullcontact.com" class="text-muted">FullContact</a>.</p>
+        <p class="text-muted text-center">We do not collect or store your info or emails. The data you see is provided by either Gravatar or <a href="https://www.fullcontact.com" class="text-muted">FullContact</a>.</p>
       </div>
     </div>
   </div>
